nullaway_error_581f51f3-ba53-4d34-a979-0140b6a3d8db.txt
Stopping file watching and invalidating VFS after an error happened
/home/nima/Developer/nullness-benchmarks/eureka/eureka-core/src/main/java/com/netflix/eureka/resources/ApplicationsResource.java:129: error: [NullAway] dereferenced expression regionsStr is @Nullable
            regions = regionsStr.toLowerCase().split(",");
                                ^
